examples/positive/L3/non_var_in_proc.ob
MODULE NonVarInProc;

VAR x: INTEGER;

PROCEDURE FOO(b: INTEGER);
  BEGIN
    Write(b); WriteLn;
    b := 42;
    Write(b); WriteLn;
  END FOO;

BEGIN
  x := 0;
  FOO(x);
  Write(x); WriteLn;
END NonVarInProc.
