examples/negative/type_errors/L4/7_array_in_proc.ob
MODULE ArrayInProc;

TYPE MYARRAY = ARRAY 3 OF INTEGER;

VAR a: MYARRAY;

PROCEDURE FOO(b: ARRAY 3 OF INTEGER);
  BEGIN
    b[1] := 42
  END FOO;

BEGIN
  a[0] := 3;
  FOO(a);

END ArrayInProc.
